--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Snake</title>
+  <link rel="stylesheet" href="src/style.css">
+</head>
 <body>
-    <div id="root">
-        <table id="map"></table>
-    </div>
+  <div id="root"></div>
+  <script type="module" src="src/index.ts"></script>
 </body>
-<script src="./src/game.ts"></script>
-<link rel="stylesheet" href="./src/style.css">
 </html>
